--- a/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
@@ -197,7 +197,7 @@
                   Vui lòng điền tên tài liệu
                 </span>
               <span
-                *ngIf="documentNameControls?.errors?.['maxLength']"
+                *ngIf="documentNameControls?.errors?.['maxlength']"
                 class="p-error"
               >
                   Tên tài liệu quá dài
@@ -224,7 +224,7 @@
                   Vui lòng điền mã tài liệu
                 </span>
               <span
-                *ngIf="documentCodeControls?.errors?.['maxLength']"
+                *ngIf="documentCodeControls?.errors?.['maxlength']"
                 class="p-error">
                 Mã tài liệu quá dài
                 </span>
