validate create template

--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -24,6 +24,22 @@
         formControlName="assignmentName"
         placeholder="Điền tên công việc"
       />
+      <div
+        *ngIf="assignmentForm.controls?.['assignmentName']?.invalid && (assignmentForm.controls?.['assignmentName']?.touched || assignmentForm.controls?.['assignmentName']?.dirty)"
+      >
+        <span
+          *ngIf="assignmentForm.controls?.['assignmentName']?.errors?.['required'] || assignmentForm.controls?.['assignmentName']?.errors?.['whitespace']"
+          class="p-error"
+        >
+          Vui lòng điền tên công việc
+        </span>
+        <span
+          *ngIf="assignmentForm.controls?.['assignmentName']?.errors?.['maxlength']"
+          class="p-error"
+        >
+          Tên công việc quá dài
+        </span>
+      </div>
     </div>
     <div class="mb-5">
       <label class="fw-medium mb-1">Mô tả chi tiết</label>
@@ -35,6 +51,22 @@
         formControlName="description"
         placeholder="Điền chi tiết công việc"
       ></textarea>
+      <div
+        *ngIf="assignmentForm.controls?.['description']?.invalid && (assignmentForm.controls?.['description']?.touched || assignmentForm.controls?.['description']?.dirty)"
+      >
+        <span
+          *ngIf="assignmentForm.controls?.['description']?.errors?.['required'] || assignmentForm.controls?.['description']?.errors?.['whitespace']"
+          class="p-error"
+        >
+          Vui lòng điền chi tiết công việc
+        </span>
+        <span
+          *ngIf="assignmentForm.controls?.['description']?.errors?.['maxlength']"
+          class="p-error"
+        >
+          Chi tiết công việc quá dài
+        </span>
+      </div>
     </div>
     <!-- <div class="mb-5">
       <span class="mb-1">Hạn nộp</span><br />
