--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -23,23 +23,23 @@
   ></app-file-loading>
   <!-- file preview -->
   <p-dialog
-  header="Xem tài liệu"
-  [(visible)]="pdfPreviewVisibility"
-  [style]="{ width: '90vw', height: '100vh' }"
-  [draggable]="false"
-  [resizable]="false"
-  [maximizable]="true"
-  [modal]="true"
-  (onHide)="onHideFilePreviewEvent()"
->
-  <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
-    <div class="spinner-border text-center" role="status"></div>
-    <p>Đang tải...</p>
-  </div>
-  <ng-template #pdfIsLoaded>
-    <iframe [src]="safePdfUrl" width="100%" height="99%"></iframe>
-  </ng-template>
-</p-dialog>
+    header="Xem tài liệu"
+    [(visible)]="pdfPreviewVisibility"
+    [style]="{ width: '90vw', height: '100vh' }"
+    [draggable]="false"
+    [resizable]="false"
+    [maximizable]="true"
+    [modal]="true"
+    (onHide)="onHideFilePreviewEvent()"
+  >
+    <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
+      <div class="spinner-border text-center" role="status"></div>
+      <p>Đang tải...</p>
+    </div>
+    <ng-template #pdfIsLoaded>
+      <iframe [src]="safePdfUrl" width="100%" height="99%"></iframe>
+    </ng-template>
+  </p-dialog>
   <!--doc history -->
   <p-dialog
     header="Lịch sử phê duyệt"
@@ -197,124 +197,118 @@
       [resizable]="false"
       (onHide)="hideUploadPopup()"
     >
-    <div class="row">
-      <div class="col-md-8">
-        <div class="mb-2">
-          <label class="fw-medium mb-1"
-            >Tên tài liệu<span class="p-error">*</span></label
-          >
-          <br />
-          <input
-            class="w-100"
-            pInputText
-            formControlName="documentName"
-            type="text"
-            placeholder="Tên tài liệu"
-          />
-          <div
-            *ngIf="inputFileForm.controls?.['documentName']?.invalid && (inputFileForm.controls?.['documentName']?.touched || inputFileForm.controls?.['documentName']?.dirty)"
-          >
-            <span
-              *ngIf="inputFileForm.controls?.['documentName']?.errors?.['required'] || inputFileForm.controls?.['documentName']?.errors?.['whitespace']"
-              class="p-error"
+      <div class="row">
+        <div class="col-md-8">
+          <div class="mb-2">
+            <label class="fw-medium mb-1"
+              >Tên tài liệu<span class="p-error">*</span></label
             >
-              Vui lòng điền tên tài liệu
-            </span>
-            <span
-              *ngIf="inputFileForm.controls?.['documentName']?.errors?.['maxlength']"
-              class="p-error"
-            >
-              Tên tài liệu quá dài
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="mb-2">
-          <label class="mb-1 fw-medium"
-            >Mã tài liệu<span class="p-error">*</span></label
-          >
-          <input
-            class="w-100"
-            pInputText
-            formControlName="documentCode"
-            type="text"
-            placeholder="Mã tài liệu"
-          />
-          <div
-            *ngIf="inputFileForm.controls?.['documentCode']?.invalid && (inputFileForm.controls?.['documentCode']?.touched || inputFileForm.controls?.['documentCode']?.dirty)"
-          >
-            <span
-              *ngIf="inputFileForm.controls?.['documentCode']?.errors?.['required'] || inputFileForm.controls?.['documentCode']?.errors?.['whitespace']"
-              class="p-error"
-            >
-              Vui lòng điền mã tài liệu
-            </span>
-            <span
-              *ngIf="inputFileForm.controls?.['documentCode']?.errors?.['maxlength']"
-              class="p-error"
-            >
-              Mã tài liệu quá dài
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-12">
-        <div class="mb-2">
-          <label class="mb-1 fw-medium"
-            >Tài liệu<span class="p-error">*</span></label
-          >
-          <div class="input-file row w-100">
-            <div class="col-md-9 padding-none">
-              <input
-                type="file"
-                accept="application/pdf"
-                #fileInput
-                style="display: none"
-                (change)="handleFileInputChange(fileInput)"
-                class="w-100"
-              />
-              <input
-                pInputText
-                readonly
-                placeholder="{{
-                  fileInputPlaceholders
-                    ? fileInputPlaceholders
-                    : 'Chọn file để tải lên'
-                }}"
-              />
-            </div>
-            <div class="col-md-3 padding-none">
-              <button
-                class="upload-file w-100"
-                type="button"
-                pButton
-                label="Chọn tệp"
-                (click)="fileInput.click()"
-              ></button>
-            </div>
+            <br />
+            <input
+              class="w-100"
+              pInputText
+              formControlName="documentName"
+              type="text"
+              placeholder="Tên tài liệu"
+            />
             <div
-              class="padding-none"
-              *ngIf="inputFileForm.controls?.['file']?.invalid && (inputFileForm.controls?.['file']?.touched || inputFileForm.controls?.['file']?.dirty)"
+              *ngIf="inputFileForm.controls?.['documentName']?.invalid && (inputFileForm.controls?.['documentName']?.touched || inputFileForm.controls?.['documentName']?.dirty)"
             >
               <span
-                *ngIf="inputFileForm.controls?.['file']?.errors?.['required']"
+                *ngIf="inputFileForm.controls?.['documentName']?.errors?.['required'] || inputFileForm.controls?.['documentName']?.errors?.['whitespace']"
                 class="p-error"
               >
-                Vui lòng chọn tài liệu
+                Vui lòng điền tên tài liệu
+              </span>
+              <span
+                *ngIf="inputFileForm.controls?.['documentName']?.errors?.['maxlength']"
+                class="p-error"
+              >
+                Tên tài liệu quá dài
               </span>
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="mb-2">
+            <label class="mb-1 fw-medium"
+              >Mã tài liệu<span class="p-error">*</span></label
+            >
+            <input
+              class="w-100"
+              pInputText
+              formControlName="documentCode"
+              type="text"
+              placeholder="Mã tài liệu"
+            />
+            <div
+              *ngIf="inputFileForm.controls?.['documentCode']?.invalid && (inputFileForm.controls?.['documentCode']?.touched || inputFileForm.controls?.['documentCode']?.dirty)"
+            >
+              <span
+                *ngIf="inputFileForm.controls?.['documentCode']?.errors?.['required'] || inputFileForm.controls?.['documentCode']?.errors?.['whitespace']"
+                class="p-error"
+              >
+                Vui lòng điền mã tài liệu
+              </span>
+              <span
+                *ngIf="inputFileForm.controls?.['documentCode']?.errors?.['maxlength']"
+                class="p-error"
+              >
+                Mã tài liệu quá dài
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="mb-2">
+            <label class="mb-1 fw-medium"
+              >Tài liệu<span class="p-error">*</span></label
+            >
+            <div class="input-file row w-100">
+              <div class="col-md-9 padding-none">
+                <input
+                  type="file"
+                  accept="application/pdf"
+                  #fileInput
+                  style="display: none"
+                  (change)="handleFileInputChange(fileInput)"
+                  class="w-100"
+                />
+                <input
+                  pInputText
+                  readonly
+                  placeholder="{{
+                    fileInputPlaceholders
+                      ? fileInputPlaceholders
+                      : 'Chọn file để tải lên'
+                  }}"
+                />
+              </div>
+              <div class="col-md-3 padding-none">
+                <button
+                  class="upload-file w-100"
+                  type="button"
+                  pButton
+                  label="Chọn tệp"
+                  (click)="fileInput.click()"
+                ></button>
+              </div>
+              <div
+                class="padding-none"
+                *ngIf="inputFileForm.controls?.['file']?.invalid && (inputFileForm.controls?.['file']?.touched || inputFileForm.controls?.['file']?.dirty)"
+              >
+                <span
+                  *ngIf="inputFileForm.controls?.['file']?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng chọn tài liệu
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-      <button
-        type="button"
-        pButton
-        (click)="upload()"
-      >
-        Tải tài liệu
-      </button>
+      <button type="button" pButton (click)="upload()">Tải tài liệu</button>
     </p-dialog>
   </form>
 
@@ -477,7 +471,7 @@
             <div
               class="file-item py-1 d-flex"
               (click)="displayNewFileUpload(newFile)"
-              pTooltip="{{ lastDocs.departmentDocument.documentName }}.pdf"
+              pTooltip="{{ lastDocs?.departmentDocument?.documentName }}.pdf"
               tooltipPosition="top"
             >
               <div
