Add data not exist component

--- a/src/app/features/login/login-base/login-base.component.html
+++ b/src/app/features/login/login-base/login-base.component.html
@@ -10,7 +10,7 @@
         <p class="fs-2 fw-bold text-white mx-3 mt-3">cấp Quận</p>
         <p class="fs-2 fw-bold text-white mx-3 mt-3">các Trường Mầm Non</p>
         <div class="mx-3 my-5">
-          <img src="assets/pictures/login.png" alt="" class="rounded w-100 h-100">
+          <img src="../../../../assets/img/login.png" alt="" class="rounded w-100 h-100">
         </div>
       </div>
     </div>
