--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -117,7 +117,7 @@
       *ngIf="advanceSearch"
       class="d-flex justify-content-end align-items-center col-md-2"
     >
-      <button pButton class="reset-button" (click)="reset()">Reset</button>
+      <button pButton class="reset-button" (click)="reset()">Đặt lại</button>
     </div>
     <div
       class="col-md-12 d-flex flex-row justify-content-end align-items-center"
