--- a/src/app/features/post-login/inspection-plan/inspection-plan-detail/inspection-plan-detail.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-detail/inspection-plan-detail.component.html
@@ -5,6 +5,7 @@
   [draggable]="false"
   [resizable]="false"
   [modal]="true"
+  [maximizable]="true"
 >
   <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
     <div class="spinner-border text-center" role="status"></div>
@@ -17,23 +18,6 @@
 <div class="container-fluid">
   <h5 class="mat-headline-5 fw-medium">Chi tiết quyết định kiểm tra</h5>
   <div class="row inspection-plan-detail">
-    <p-dialog
-      appendTo="body"
-      header="Xem tài liệu"
-      [(visible)]="pdfPreviewVisibility"
-      [style]="{ width: '100vw', height: '100vh' }"
-      [draggable]="false"
-      [resizable]="false"
-      [modal]="true"
-    >
-      <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
-        <div class="spinner-border text-center" role="status"></div>
-        <p>Đang tải...</p>
-      </div>
-      <ng-template #pdfIsLoaded>
-        <iframe [src]="safePdfUrl" width="100%" height="105%"></iframe>
-      </ng-template>
-    </p-dialog>
     <h4 class="mb-3">Chi tiết quyết định kiểm tra</h4>
     <div class="row">
       <div
@@ -115,7 +99,7 @@
           <div
             class="file-item-icon d-flex justify-content-center align-items-center"
           >
-            <img src="../../../../../assets/img/pdf_logo.svg" alt="" />
+            <img src="../../../../../assets/img/pdf_logo.svg" alt=""/>
           </div>
           <div class="row col-md-10 d-flex align-items-end mb-3">
             <div class="col-md-8">
