--- a/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
@@ -170,7 +170,7 @@
       *ngIf="advanceSearch"
       class="d-flex justify-content-end align-items-center col-md-2"
     >
-      <button pButton class="reset-button" (click)="reset()">Reset</button>
+      <button pButton class="reset-button" (click)="reset()">Đặt lại</button>
     </div>
     <div
       class="col-md-12 d-flex flex-row justify-content-end align-items-center mt-2"
