--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -2,6 +2,7 @@
   [style]="{width: '50vw'}"
   acceptLabel="Xác nhận"
   rejectLabel="Hủy bỏ"
+  key="changeTime"
 ></p-confirmDialog>
 <p-dialog
   header="Xem tài liệu"
