--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.scss
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.scss
@@ -164,3 +164,14 @@
     }
   }
 }
+
+:host ::ng-deep .p-dialog-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  .p-button {
+    margin-left: 30px;
+    width: 120px;
+  }
+}
