--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.scss
@@ -196,8 +196,12 @@
   }
 }
 
-.reset-button{
+.reset-button {
   background-color: white;
-  color: $primary;
+  color: $primary !important;
   border: 1px solid $primary;
+
+  &:hover {
+    color: white !important;
+  }
 }
