--- a/src/app/features/post-login/user/user-list/user-list.component.html
+++ b/src/app/features/post-login/user/user-list/user-list.component.html
@@ -151,7 +151,7 @@
       *ngIf="advanceSearch"
       class="d-flex justify-content-end align-items-end col-md-2"
     >
-      <button pButton class="reset-button" (click)="reset()">Reset</button>
+      <button pButton class="reset-button" (click)="reset()">Đặt lại</button>
     </div>
     <div
       class="mt-3 d-flex flex-row justify-content-between align-items-center"
