--- a/src/app/features/post-login/user/user-list/user-list.component.scss
+++ b/src/app/features/post-login/user/user-list/user-list.component.scss
@@ -211,6 +211,10 @@
 
 .reset-button {
   background-color: white;
-  color: $primary;
+  color: $primary !important;
   border: 1px solid $primary;
+
+  &:hover {
+    color: white !important;
+  }
 }
