un sub create school

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -46,7 +46,7 @@
           class="p-2 rounded"
           routerLinkActive="active"
         >
-          <a class="" [routerLink]="['/inspection-plan']">
+          <a class="" [routerLink]="['/inspection-plan']" *ngIf="!isAdmin">
             <div>
               <i class="bi bi-file-earmark-person"></i>
               &nbsp; Thanh tra
