--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -37,6 +37,18 @@
           </div>
         </div>
         <div class="col-md-4">
+
+          <tui-input-date-range
+                  [(ngModel)]="dateRange"
+                  (selectionchange)="changeStartDate()"
+          >
+            Choose dates
+            <input
+                    placeholder="From - To"
+                    tuiTextfield
+            />
+          </tui-input-date-range>
+
           <mat-form-field class="w-100">
             <mat-label>Khoảng thời gian tạo</mat-label>
             <mat-date-range-input [rangePicker]="picker1">
@@ -60,6 +72,7 @@
           </mat-form-field>
         </div>
         <div class="col-md-4">
+
           <mat-form-field class="w-100">
             <mat-label>Khoảng hạn nộp</mat-label>
             <mat-date-range-input [rangePicker]="picker2">
