--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -92,6 +92,7 @@
           <div class="col-md-6 mb-2">
             <label class="fw-medium mb-1">Ngày bắt đầu<span class="p-error">*</span></label>
             <tui-input-date
+              (tuiValueChanges)="onStartDateChange()"
               [min]="minStartDate"
               [max]="maxStartDate"
               tuiTextfieldSize="m"
@@ -103,6 +104,7 @@
           <div class="col-md-6 mb-2">
             <label class="fw-medium mb-1">Ngày kết thúc<span class="p-error">*</span></label>
             <tui-input-date
+              (tuiValueChanges)="onEndDateChange()"
               [min]="minEndDate"
               class="tui-date"
               tuiTextfieldSize="m"
