fix initiation plan

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -468,7 +468,7 @@
           >
             <img src="assets/img/pdf_logo.svg" alt="" />
           </div>
-          <div class="row col-md-10 d-flex align-items-end mb-3">
+          <div class="row col-md-10 d-flex align-items-center mb-3">
             <div class="col-md-8">
               <p class="mb-0">
                 <span class="fw-medium"
@@ -594,7 +594,7 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-end mb-3">
+              <div class="row col-md-10 d-flex align-items-center mb-3">
                 <div class="col-md-8">
                   <p class="mb-0">
                     <span class="fw-medium"
