--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -192,7 +192,7 @@
       header="Nộp tài liệu"
       [(visible)]="uploadFileVisible"
       [modal]="true"
-      [style]="{ width: '60vw', height: '600px' }"
+      [style]="{ width: '50vw' }"
       [draggable]="false"
       [resizable]="false"
       (onHide)="hideUploadPopup()"
@@ -308,7 +308,9 @@
           </div>
         </div>
       </div>
-      <button type="button" pButton (click)="upload()">Tải tài liệu</button>
+      <div class="d-flex justify-content-center align-items-center">
+        <button type="button" pButton (click)="upload()">Tải tài liệu</button>
+      </div>
     </p-dialog>
   </form>
 
@@ -319,7 +321,7 @@
         <div class="row mb-2">
           <div class="col-md-8">
             <div class="mb-1">
-              <span class="mb-2 span-heading-color">Tên kế hoạch</span>
+              <label class="mb-2 span-heading-color">Tên kế hoạch</label>
               <p class="fw-medium p-content-fs">
                 {{ schoolinitiationplan.initiationPlanName }}
               </p>
@@ -327,7 +329,7 @@
           </div>
           <div class="col-md-4">
             <div class="mb-1">
-              <span class="mb-2 text-black-50">Người lên kế hoạch</span>
+              <span class="mb-2 span-heading-color">Người lên kế hoạch</span>
               <p class="fw-medium p-content-fs">
                 {{ schoolinitiationplan.createdBy }}
               </p>
@@ -346,7 +348,7 @@
           </div>
           <div class="col-md-4">
             <div class="mb-1">
-              <span class="mb-2 text-black-50">Trạng thái</span>
+              <span class="mb-2 span-heading-color">Trạng thái</span>
               <br />
               <p-tag
                 *ngIf="
@@ -367,7 +369,7 @@
         <div class="row mb-2">
           <div class="col-md-8">
             <div class="mb-1">
-              <span class="mb-2 text-black-50">Ngày tạo</span>
+              <span class="mb-2 span-heading-color">Ngày tạo</span>
               <p class="fw-medium p-content-fs">
                 {{ schoolinitiationplan.createdDate | date : "dd/MM/yyyy" }}
               </p>
@@ -375,7 +377,7 @@
           </div>
           <div class="col-md-4">
             <div class="mb-1">
-              <span class="mb-2 text-black-50">Hạn nộp</span>
+              <span class="mb-2 span-heading-color">Hạn nộp</span>
               <p class="fw-medium p-error">
                 {{ schoolinitiationplan?.deadline | date : "dd/MM/yyyy" }}
               </p>
@@ -384,20 +386,19 @@
         </div>
       </div>
       <div class="plan-file mt-3">
-        <span class="text-black-50">Tài liệu</span>
-        <br />
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-8 d-flex align-items-center">
+            <label class="mb-1 fw-medium p-content-fs">Tài liệu</label>
+          </div>
+          <div class="col-md-4">
             <button pButton class="mb-2" (click)="docHistoryVisible = true">
               Xem lịch sử phê duyệt tài liệu
             </button>
           </div>
-          <!-- <div class="col-md-4">
-            <button pButton class="mb-2" (click)="redirectToIssue()">
-              Kế hoạch kiểm tra
-            </button>
-          </div> -->
         </div>
+
+        <br />
+
         <ng-container *ngIf="lastDocs?.departmentDocument">
           <div
             *ngIf="schoolinitiationplan?.status.statusId != 6"
@@ -409,7 +410,7 @@
             >
               <img src="assets/img/pdf_logo.svg" alt="" />
             </div>
-            <div class="row col-md-10 d-flex align-items-end mb-3">
+            <div class="row col-md-10 d-flex align-items-center mb-3">
               <div class="col-md-8">
                 <p class="mb-0">
                   <span class="fw-medium"
@@ -479,7 +480,7 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-end">
+              <div class="row col-md-10 d-flex align-items-center">
                 <div class="col-md-6 mb-3">
                   <p class="mb-0">
                     <span class="fw-medium"
@@ -553,7 +554,7 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-end">
+              <div class="row col-md-10 d-flex align-items-center">
                 <div class="col-md-6 mb-3">
                   <p class="mb-0">
                     <span class="fw-medium"
@@ -605,7 +606,7 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-end">
+              <div class="row col-md-10 d-flex align-items-center">
                 <div class="col-md-6 mb-3">
                   <p class="mb-0">
                     <span class="fw-medium"
@@ -688,7 +689,7 @@
               >
                 <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="row col-md-10 d-flex align-items-end mb-3">
+              <div class="row col-md-10 d-flex align-items-center mb-3">
                 <div class="col-md-8">
                   <p class="mb-0">
                     <span class="fw-medium"
