--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -3,7 +3,7 @@
   <h5 class="mat-headline-5 fw-medium mb-4">
     Kế hoạch thực hiện nhiệm vụ năm học
   </h5>
-  <p-toast></p-toast>
+  <p-toast key="toastInitiationPlan"></p-toast>
   <p-confirmDialog
     [style]="{ width: '50vw' }"
     acceptLabel="Đồng ý"
@@ -188,6 +188,7 @@
   </p-dialog>
 
   <form [formGroup]="inputFileForm">
+    <!-- file upload -->
     <p-dialog
       header="Nộp tài liệu"
       [(visible)]="uploadFileVisible"
@@ -472,7 +473,7 @@
             <div
               class="file-item py-1 d-flex"
               (click)="displayNewFileUpload(newFile)"
-              pTooltip="{{ lastDocs?.departmentDocument?.documentName }}.pdf"
+              pTooltip="{{ lastDocs?.schoolDocument?.documentName }}.pdf"
               tooltipPosition="top"
             >
               <div
@@ -513,7 +514,7 @@
                   <div
                     *ngIf="iconStatus"
                     class="delete-icon d-flex justify-content-center align-items-center"
-                    (click)="deleteFile($event)"
+                    (click)="deleteFile($event, 0)"
                   >
                     <i class="bi bi-x-lg"></i>
                   </div>
@@ -543,59 +544,6 @@
               >
             </div>
             <div
-              *ngIf="inputFileForm.get('documentName')?.value"
-              class="file-item py-1 d-flex"
-              (click)="displayNewFileUpload(newFile)"
-              pTooltip="{{ inputFileForm.get('documentName')?.value }}.pdf"
-              tooltipPosition="top"
-            >
-              <div
-                class="file-item-icon d-flex justify-content-center align-items-center"
-              >
-                <img src="assets/img/pdf_logo.svg" alt="" />
-              </div>
-              <div class="row col-md-10 d-flex align-items-center">
-                <div class="col-md-6 mb-3">
-                  <p class="mb-0">
-                    <span class="fw-medium"
-                      >{{ inputFileForm.get("documentName")?.value }}.pdf</span
-                    >
-                    <span></span>
-                  </p>
-                  <p class="mb-0">
-                    <span>Mã tài liệu: </span>
-                    <span class="fw-medium">{{
-                      inputFileForm.get("documentCode")?.value
-                    }}</span>
-                  </p>
-                </div>
-                <div class="col-md-4 mb-3 text-end">
-                  <p class="mb-0">
-                    <!-- <span>Kích thước: </span> -->
-                    <span class="fw-medium">{{ getSize(newFile.size) }}</span>
-                  </p>
-                  <p class="mb-0">
-                    <!-- <span>Ngày tạo: </span> -->
-                    <span class="fw-medium">{{
-                      today | date : "dd/MM/yyyy"
-                    }}</span>
-                  </p>
-                </div>
-                <div
-                  class="align-self-center col-md-2 d-flex justify-content-center align-items-center"
-                >
-                  <div
-                    *ngIf="iconStatus"
-                    class="delete-icon d-flex justify-content-center align-items-center"
-                    (click)="deleteFile($event)"
-                  >
-                    <i class="bi bi-x-lg"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div
-              *ngIf="!inputFileForm.get('documentName')?.value"
               class="file-item py-1 d-flex"
               (click)="openNewTab(lastDocs.schoolDocument?.documentLink)"
               pTooltip="{{ lastDocs.schoolDocument.documentName }}.pdf"
@@ -638,7 +586,9 @@
                   <div
                     *ngIf="iconStatus"
                     class="delete-icon d-flex justify-content-center align-items-center"
-                    (click)="deleteFile($event)"
+                    (click)="
+                      deleteFile($event, lastDocs.schoolDocument.documentId)
+                    "
                   >
                     <i class="bi bi-x-lg"></i>
                   </div>
@@ -663,17 +613,6 @@
                 ></button>
               </div>
             </div>
-          </div>
-          <div
-            *ngIf="!fileStatus"
-            class="d-flex justify-content-center align-items-center btn-upload mt-5"
-          >
-            <button
-              type="button"
-              pButton
-              label="Nộp"
-              (click)="uploadFileVisible = true"
-            ></button>
           </div>
         </ng-container>
         <ng-container *ngIf="schoolinitiationplan?.status.statusId == 8">
