--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -115,6 +115,17 @@
             (click)="fileInput.click()"
           ></button>
         </div>
+        <div
+          class="padding-none"
+          *ngIf="fileInputForm.controls?.['file']?.invalid && (fileInputForm.controls?.['file']?.touched || fileInputForm.controls?.['file']?.dirty)"
+        >
+          <span
+            *ngIf="fileInputForm.controls?.['file']?.errors?.['required']"
+            class="p-error"
+          >
+            Vui lòng chọn tài liệu
+          </span>
+        </div>
         <div class="mt-3 d-flex justify-content-center align-items-center">
           <button pButton (click)="uploadFiles()">Nộp tài liệu</button>
         </div>
@@ -128,7 +139,7 @@
         action === 'update' ? 'Cập nhật công việc' : 'Chi tiết công việc'
       "
       [(visible)]="detailVisible"
-      [style]="{ width: '70vw', height: '1080px' }"
+      [style]="{ width: '70vw' }"
       [draggable]="false"
       [resizable]="false"
       (onHide)="assignmentPopuptHideEvent()"
@@ -731,6 +742,7 @@
               pInputText
               type="text"
               formControlName="assignmentName"
+              placeholder="Điền chi tiết tên công việc"
             />
             <div
               *ngIf="assignmentForm.controls?.['assignmentName']?.invalid && (assignmentForm.controls?.['assignmentName']?.touched || assignmentForm.controls?.['assignmentName']?.dirty)"
@@ -749,7 +761,7 @@
               </span>
             </div>
           </div>
-          <div class="height-100">
+          <div class="height-120">
             <label class="mb-1 fw-medium"
               >Chi tiết công việc<span class="p-error">*</span></label
             >
@@ -758,7 +770,24 @@
               class="mb-1"
               pInputTextarea
               formControlName="description"
+              placeholder="Điền chi tiết công việc"
             ></textarea>
+            <div
+              *ngIf="assignmentForm.controls?.['description']?.invalid && (assignmentForm.controls?.['description']?.touched || assignmentForm.controls?.['description']?.dirty)"
+            >
+              <span
+                *ngIf="assignmentForm.controls?.['description']?.errors?.['required'] || assignmentForm.controls?.['description']?.errors?.['whitespace']"
+                class="p-error"
+              >
+                Vui lòng điền chi tiết công việc
+              </span>
+              <span
+                *ngIf="assignmentForm.controls?.['description']?.errors?.['maxlength']"
+                class="p-error"
+              >
+                Chi tiết công việc quá dài
+              </span>
+            </div>
           </div>
           <div class="height-100">
             <label class="mb-1 fw-medium"
@@ -776,7 +805,7 @@
               selectedAssignment.assignmentName
             }}</span>
           </div>
-          <div class="height-100">
+          <div class="height-120">
             <label class="mb-1 fw-medium"
               >Người làm<span class="p-error">*</span></label
             >
