--- a/src/app/features/post-login/inspection/inspection.component.html
+++ b/src/app/features/post-login/inspection/inspection.component.html
@@ -1,2 +1,2 @@
-<p-tabMenu [model]="tabs" [activeItem]="activeTab"></p-tabMenu>
+<p-tabMenu class="mb-2" [model]="tabs" [activeItem]="activeTab"></p-tabMenu>
 <router-outlet></router-outlet>
