--- a/src/app/features/post-login/inspection/inspection-information/inspection-information.component.html
+++ b/src/app/features/post-login/inspection/inspection-information/inspection-information.component.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <h5 class="my-2">Tài liệu công văn</h5>
-        <p-tabMenu [model]="tabs" [activeItem]="activeTab"></p-tabMenu>
+        <p-tabMenu [model]="tabs" [activeItem]="activeTab" class="mb-2"></p-tabMenu>
         <div class="file-item-container">
           <div *ngIf="issueDocumentVisibility">
             <div *ngFor="let doc of inspection.issueDocuments; let i = index" class="mb-2">
@@ -54,7 +54,6 @@
             <app-file-item [document]="inspection.inspectionPlanDocument"></app-file-item>
           </div>
         </div>
-
       </div>
       <div class="col-md-4 d-flex justify-content-center h-100">
         <app-inspection-plan-inspector-list
