--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -77,27 +77,16 @@
     <div *ngIf="advanceSearch" class="col-md-10 mt-2">
       <div class="row">
         <div class="col-md-6">
-          <mat-form-field class="w-100">
-            <mat-label>Khoảng thời gian tạo</mat-label>
-            <mat-date-range-input [rangePicker]="picker">
-              <input
-                matStartDate
-                [(ngModel)]="startDateTime"
-                placeholder="Ngày tạo bắt đầu"
-              />
-              <input
-                matEndDate
-                [(ngModel)]="endDateTime"
-                placeholder="Ngày tạo kết thúc"
-                (dateChange)="loadGuidanceDocuments()"
-              />
-            </mat-date-range-input>
-            <mat-datepicker-toggle
-              matIconSuffix
-              [for]="picker"
-            ></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-          </mat-form-field>
+          <label class="fw-medium">Khoảng thời gian tạo</label>
+          <tui-input-date-range
+            class="tui-date"
+            tuiTextfieldSize="m"
+            [(ngModel)]="createDateRange"
+            (durationchange)="changeStartDate()"
+            (ngModelChange)="changeStartDate()"
+
+          >
+          </tui-input-date-range>
         </div>
         <div class="col-md-6">
           <label class="fw-medium">Người tạo</label>
